# memoria

./: .gitignore  CHANGELOG.md  README.md  alembic.ini  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/en/: README.md  cli.md  configuration.md  design.md  development.md  installation.md  quickstart.md
docs/zh-CN/: README.md  cli.md  configuration.md  design.md  development.md  installation.md  quickstart.md
skills/memoria/: SKILL.md
skills/memoria/agents/: openai.yaml
skills/memoria/references/: configuration.md  debugging.md  usage.md
src/memoria/: __init__.py  __main__.py  build_info.py  config.py  version.py
src/memoria/application/ports/: llm_provider.py  transcript_store.py
src/memoria/application/services/: association_service.py  backup_service.py  ingest_service.py  llm_tool_service.py  patch_service.py  query_service.py  sleep_service.py
src/memoria/domain/: enums.py  errors.py
src/memoria/infrastructure/backup/: archive.py
src/memoria/infrastructure/db/: models.py  session.py
src/memoria/infrastructure/db/migrations/: env.py
src/memoria/infrastructure/db/migrations/versions/: 0001_initial.py
src/memoria/infrastructure/llm/: mock_provider.py  openai_provider.py
src/memoria/infrastructure/transcript/: jsonl_store.py
src/memoria/interfaces/cli/: app.py  output.py
src/memoria/interfaces/cli/commands/: backup.py  chain.py  ingest.py  issue.py  patch.py  proposed.py  sleep.py
src/memoria/schemas/: cli.py  llm.py  patches.py
tests/: conftest.py  test_backup_service.py  test_cli.py  test_config.py  test_ingest_service.py  test_llm_worker_mock.py  test_models_migration.py  test_mvp_flow.py  test_openai_provider.py  test_patch_schema.py  test_patch_service.py  test_query_service.py  test_transcript_store.py
