[project]
name = "memoria"
version = "0.1.0"
description = "Local-first LLM-driven memory system"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "openai>=1.0",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
memoria = "memoria.interfaces.cli.app:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "openai_live: tests that may call the real OpenAI API",
]
