[project]
name = "memoria-cli"
version = "0.1.0"
description = "Local-first LLM-driven memory system"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Memoria contributors" },
]
keywords = ["memory", "llm", "cli", "openai", "sqlite"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = [
  "alembic>=1.13",
  "openai>=1.0",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
binary = [
  "pyinstaller>=6.0",
]

[project.scripts]
memoria = "memoria.interfaces.cli.app:app"

[project.urls]
Homepage = "https://github.com/SunJun8/memoria"
Repository = "https://github.com/SunJun8/memoria"
Issues = "https://github.com/SunJun8/memoria/issues"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "openai_live: tests that may call the real OpenAI API",
]
